Fixed alignment of red live-dot.

--- a/src/components/Twitch/Twitch.module.scss
+++ b/src/components/Twitch/Twitch.module.scss
@@ -144,7 +144,7 @@
   border-radius: 7px;
   bottom: 40px;
   position: relative;
-  right: -284px;
+  right: -303px;
 }
 
 .refreshButton {
